MarcoKitTests/TestData/error/object5.marco
--before
{a {b {c "d"}}

--after
13-14: '}' expected
